--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -300,7 +300,7 @@ h6 {
   .navmenu li:hover>a,
   .navmenu .active,
   .navmenu .active:focus {
-    color: var(--nav-hover-color);
+    color: #0010f7;
   }
 
   .navmenu .dropdown ul {
