--- a/assets/css/prueba.css
+++ b/assets/css/prueba.css
@@ -375,7 +375,7 @@
     .navmenu li:hover>a,
     .navmenu .active,
     .navmenu .active:focus {
-      color: var(--nav-hover-color);
+      color: #0010f7;
     }
   
     .navmenu .dropdown ul {
